KataKubernetes/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-service
spec:
  type: LoadBalancer
  selector:
    app: simpleapi
  ports:
  - protocol: TCP
    port: 5102
    targetPort: 5102
