KataKubernetes/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # Example for NGINX
spec:
  ingressClassName: nginx # Assuming NGINX ingress controller
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simpleapi-service
            port:
              number: 5102
